fix buttons' alignment

--- a/src/style.css
+++ b/src/style.css
@@ -65,6 +65,10 @@
 
   &__link {
     margin-top: auto;
+
+    &.button {
+      margin-top: auto;
+    }
   }
 
   .link {
